
Release Notes for Cppcheck 2.20

Major bug fixes & crashes:
-

New checks:
-

C/C++ support:
-

GUI:
-

Changed interface:
- removed CMake option "DISABLE_CRTDBG_MAP_ALLOC"
-

Infrastructure & dependencies:
-