@@ -85,7 +85,7 @@ private:
         ASSERT_EQUALS(2, platform.sizeof_wchar_t);
         ASSERT_EQUALS(4, platform.sizeof_size_t);
         ASSERT_EQUALS(4, platform.sizeof_pointer);
-        ASSERT_EQUALS('\0', platform.defaultSign);
+        ASSERT_EQUALS('s', platform.defaultSign);
         ASSERT_EQUALS(8, platform.char_bit);
         ASSERT_EQUALS(16, platform.short_bit);
         ASSERT_EQUALS(32, platform.int_bit);
@@ -110,7 +110,7 @@ private:
         ASSERT_EQUALS(4, platform.sizeof_wchar_t);
         ASSERT_EQUALS(8, platform.sizeof_size_t);
         ASSERT_EQUALS(8, platform.sizeof_pointer);
-        ASSERT_EQUALS('\0', platform.defaultSign);
+        ASSERT_EQUALS('s', platform.defaultSign);
         ASSERT_EQUALS(8, platform.char_bit);
         ASSERT_EQUALS(16, platform.short_bit);
         ASSERT_EQUALS(32, platform.int_bit);
@@ -138,7 +138,7 @@ private:
         ASSERT_EQUALS(2, platform.sizeof_wchar_t);
         ASSERT_EQUALS(4, platform.sizeof_size_t);
         ASSERT_EQUALS(4, platform.sizeof_pointer);
-        ASSERT_EQUALS('\0', platform.defaultSign);
+        ASSERT_EQUALS('s', platform.defaultSign);
         ASSERT_EQUALS(8, platform.char_bit);
         ASSERT_EQUALS(16, platform.short_bit);
         ASSERT_EQUALS(32, platform.int_bit);
@@ -166,7 +166,7 @@ private:
         ASSERT_EQUALS(4, platform.sizeof_wchar_t);
         ASSERT_EQUALS(4, platform.sizeof_size_t);
         ASSERT_EQUALS(4, platform.sizeof_pointer);
-        ASSERT_EQUALS('\0', platform.defaultSign);
+        ASSERT_EQUALS('s', platform.defaultSign);
         ASSERT_EQUALS(8, platform.char_bit);
         ASSERT_EQUALS(16, platform.short_bit);
         ASSERT_EQUALS(32, platform.int_bit);
@@ -194,7 +194,7 @@ private:
         ASSERT_EQUALS(2, platform.sizeof_wchar_t);
         ASSERT_EQUALS(8, platform.sizeof_size_t);
         ASSERT_EQUALS(8, platform.sizeof_pointer);
-        ASSERT_EQUALS('\0', platform.defaultSign);
+        ASSERT_EQUALS('s', platform.defaultSign);
         ASSERT_EQUALS(8, platform.char_bit);
         ASSERT_EQUALS(16, platform.short_bit);
         ASSERT_EQUALS(32, platform.int_bit);
